# streamhist

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/: simple.rs
src/: lib.rs
