[package]
name = "streamhist"
version = "0.0.1-alpha.1"
authors = ["Nikolay Novik <nickolainovik@gmail.com>"]
edition = "2018"

readme = "README.md"
description = "Implementation of streaming histogram"

exclude = [".github", ".gitignore"]

homepage = "https://github.com/jettify/hyperbitbit"
repository = "https://github.com/jettify/hyperbitbit.git"

keywords = ["collections", "data-structures", "probabilistic"]
categories = ["algorithms", "data-structures"]

license = "Apache-2.0"

[dependencies]

[dependencies.serde]
package = "serde"
optional = true
version = "1.0.103"
default-features = false
features = ["std", "derive"]


[features]
serde_support = ["serde"]

[dev-dependencies]
rand = "0.8.0"
rand_distr = "0.4.0"
serde_json = "1.0.59"
approx = "0.4.0"
rand_isaac = "0.3.0"

[profile.release]
debug=true

[profile.bench]
debug=true
